fix issue where DOI box overlaps dropdown menu (ACHYDRA-716)

--- a/app/assets/stylesheets/partials/item-page-sidebar.scss
+++ b/app/assets/stylesheets/partials/item-page-sidebar.scss
@@ -53,7 +53,7 @@
   position: fixed;
   right: 8px;
   width: 63%;
-  z-index: 1000;
+  z-index: 900;
 
   & label.doi-label {
     flex: 0 1 auto;
